fixed auto zoom on iphone after using dd menu

--- a/src/components/MobileNavBar.css
+++ b/src/components/MobileNavBar.css
@@ -5,6 +5,7 @@
     width: 100%;
     text-align: center;
     display: none;
+    border-top: 0.005px solid gray;
 }
 
 @media only screen and (max-width: 600px) {
